# ZBinaryIO

./: .travis.yml  CMakeLists.txt  README.md
include/: Common.h  ZBinaryReader.hpp  ZBinaryWriter.hpp
test/: CMakeLists.txt  ZBinaryReaderTest.cpp  ZBinaryReaderTest_old.cpp  ZBinaryWriterTest.cpp
